[package]
name = "conventually"
version = "0.1.0"
edition = "2021"
default-run = "conventually"

[[bin]]
path = "./src/bin/main.rs"
name = "conventually"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
crc = "3.0.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.96"
wc-actor = { path = "/Users/divitoa/code/wasmcompute/ws-actor" }
tokio = { version = "1", features = ["rt", "sync", "macros"]}
bincode = "1.3.3"
