[package]
name = "tokactordb"
version = "0.1.0"
authors = ["Alec Di Vito"]
description = "A database built ontop of tokactor"
documentation = "https://docs.rs/tokactordb"
license = "MIT"
edition = "2021"
keywords = ["actor", "tokactor", "database", "keyvalue", "nosql"]
readme = "README.md"
homepage = "https://github.com/wasmcompute/tokactordb"
categories = ["actor", "tokio", "async", "database", "nosql"]

[features]
default = []

[lib]
name = "tokactordb"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.70"
crc = "3.0.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.96"
tokactor = "2.0.4"
tokio = { version = "1", features = ["rt", "sync", "macros"]}
bincode = "1.3.3"
obake = { version = "1.0.5", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.28"
slab = "0.4.8"
